Fixed overflow styling

--- a/src/sass/components/_flowPanel.scss
+++ b/src/sass/components/_flowPanel.scss
@@ -43,7 +43,7 @@
     .metrics-container {
         margin-top: 10px;
         display: inline-flex;
-        overflow: hidden;
+        overflow: scroll;
         margin: 0 10px 0 10px;
         overflow-y: hidden;
         padding-bottom: 5px;
